header z-index fixed

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   left: 0;
   right: 0;
 
